# Game-Of-Life

./: .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  postBuildTauri.cjs  preBuildTauri.cjs  tsconfig.json  vite.config.ts
src/: Board.ts  Cell.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: board.rs  cell.rs  cell_manager.rs  main.rs
src/Components/: Cell.ts  GameCell.ts
