[package]
name = "game-of-life"
version = "0.1.0"
description = "Conway's Game of Life"
authors = ["Naexy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-message", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8.0", features = ["serde"] }
rayon = "1.10.0"
dashmap = { version = "5.5.3", features = ["rayon"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
